--- a/html/cart.html
+++ b/html/cart.html
@@ -37,7 +37,7 @@
 				</div>
 				<div class="goods_list">
 					&nbsp;&nbsp;如下商品，由&nbsp;D1优尚网&nbsp;负责发货
-					<table width="885" style="border-top: dashed 1px #ccc;" border="0" cellspacing="0" cellpadding="0">
+					<table class="shopLists" width="885" style="border-top: dashed 1px #ccc;" border="0" cellspacing="0" cellpadding="0">
 						<tbody>
 							<tr class="th">
 								<th width="158"></th>
@@ -48,47 +48,17 @@
 								<th width="86">数量</th>
 								<th width="81">小计</th>
 							</tr>
-							<tr style="background: #fffddd;">
-								<td class="cart_1" height="100">
-									<a href="#">
-										<img src="http://images1.d1.com.cn/shopimg/gdsimg/2017/06/29/0120742320170703095914_1_80.jpg" alt="三生有仐太阳伞 秒变手提包晴雨两用伞 黑胶防晒防紫外线折叠全自动"/>
-									</a>
-								</td>
-								<td class="other_message" style="text-align: left">
-									三生有仐太阳伞 秒变手提包晴雨两用伞 黑胶防晒防紫外线折叠全自动
-									<br>
-									01207423
-									<br>
-									<a href="">删除</a>
-									&nbsp;&nbsp;
-									<a href="">加入收藏</a>
-								</td>
-								<td>
-									黄色
-								</td>
-								<td>
-									<span>138</span>
-								</td>
-								<td>
-									<span>138</span>
-								</td>
-								<td>
-									<span>1</span>
-								</td>
-								<td>
-									<font color="#FF0000">138</font>
-								</td>
-							</tr>
+							
 						</tbody>
 					</table>
 				</div>
 				<div class="goods_list tailed">
-					购物车商品总计：<font style="font-size: 13px;font-weight: bold;">7</font>件
-					<font style="color: #d80100;font-size: 16px;font-weight: bold;margin-left: 30px;">应付总额：<span>432</span>元</font>
+					购物车商品总计：<font style="font-size: 13px;font-weight: bold;">0</font>件
+					<font style="color: #d80100;font-size: 16px;font-weight: bold;margin-left: 30px;">应付总额：<span>0</span>元</font>
 				</div>
 				<div class="check_once">
 					<font color="#9f2d47" style="position: relative;top: -8px;">×&nbsp;</font>
-					<a href="#" style="position: relative;top: -8px;">清空购物车列表</a>
+					<a href="#" style="position: relative;top: -8px;" class="deleteall" >清空购物车列表</a>
 					<a href="#">
 						<img src="http://images.d1.com.cn/images2012/New/flow/sc_jxgw.gif" alt="继续购物" style="margin-left: 25px;margin-right: 20px;"align="top"/>
 					</a>
