--- a/html/cart.html
+++ b/html/cart.html
@@ -59,7 +59,7 @@
 				<div class="check_once">
 					<font color="#9f2d47" style="position: relative;top: -8px;">×&nbsp;</font>
 					<a href="#" style="position: relative;top: -8px;" class="deleteall" >清空购物车列表</a>
-					<a href="#">
+					<a href="/html/lists.html">
 						<img src="http://images.d1.com.cn/images2012/New/flow/sc_jxgw.gif" alt="继续购物" style="margin-left: 25px;margin-right: 20px;"align="top"/>
 					</a>
 					<input type="image"  id="checkout" src="http://images.d1.com.cn/images2012/New/flow/sc_ljjs.gif" style="margin-right:20px;" />
