--- a/html/register.html
+++ b/html/register.html
@@ -45,7 +45,7 @@
 									<td class="right_input">
 										<input type="text" id="check_code" class="check_code" placeholder="请输入右侧图片数字" />
 										<img class="check_code_img"src="../images/A53T.gif"/>
-										<a href="#" style="color: #575757;background: none;">刷新</a>
+										<a class="newCode" style="color: #575757;background: none;">刷新</a>
 										&nbsp;&nbsp;
 										<input type="button" name="" id="getCheckCode" value="获取验证码" />
 									</td>
