--- a/html/login.html
+++ b/html/login.html
@@ -69,7 +69,7 @@
 											&nbsp;&nbsp;&nbsp;
 											看不清,
 											&nbsp;
-											<a href="#" style="color: blue;">换一张</a>
+											<a class="changeCode" style="color: blue;">换一张</a>
 										</span>
 									</td>
 								</tr>
