--- a/html/register.html
+++ b/html/register.html
@@ -36,7 +36,7 @@
 										<input type="text" id="mobile_phone" class="input_style" />
 										&nbsp;&nbsp;
 										<span id="tel_notice">
-											<img src="../images/register/no.gif"/>
+											<img src="../images/register/no.gif" width="16" height="16"/>
 										</span>
 									</td>
 								</tr>
@@ -87,7 +87,7 @@
 										<input type="checkbox" id="sex2" name="sex" />
 										女&nbsp;&nbsp;
 										<span id="sex_notice_sucess">
-											<img src="../images/register/suc.jpg"/>
+											<img src="../images/register/suc.jpg" width="16" height="16"/>
 										</span>
 									</td>
 								</tr>
@@ -108,7 +108,7 @@
 										<input type="password" id="password" class="input_style" />
 										&nbsp;&nbsp;
 										<span id="pwd_notice_img">
-											<img src="../images/register/no.gif"/>
+											<img src="../images/register/no.gif" width="16" height="16"/>
 										</span>
 									</td>
 								</tr>
@@ -129,7 +129,7 @@
 										<input type="password" id="Confirm_password" class="input_style" />
 										&nbsp;&nbsp;
 										<span id="Confirm_pwd_notice_img">
-											<img src="../images/register/no.gif"/>
+											<img src="../images/register/no.gif"width="16" height="16"/>
 										</span>
 									</td>
 								</tr>
